@@ -262,6 +262,6 @@ __END__
 This class contains internal utilities to be used by L<JSON::Schema::Draft201909>.
 
 =for Pod::Coverage is_type get_type is_equal is_elements_unique jsonp local_annotations
-canonical_schema_uri E A abort assert_keyword_type assert_pattern
+canonical_schema_uri E A abort assert_keyword_type assert_pattern annotate_self
 
 =cut
