@@ -5,6 +5,7 @@ Revision history for JSON-Schema-Draft201909
             the most typical usecase.
           - gracefully handle the erroneous schema { "type": null }
           - fixes to relative-json-pointer format validation
+          - new "annotate_unknown_keywords" config option
 
 0.019     2020-12-08 18:40:10Z
           - further improvements to the "terse" output format
